2013-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClrange.c,
	  support/regression/tests/bug-2197.c:
	  Fix handling of pointer write in live-range splitting, fixing bug #2197.

2013-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  src/z80/ralloc2.cc,
	  support/regression/tests/bug-2195.c,
	  src/hc08/ralloc.c,
	  src/hc08/ralloc2.cc:
	  Unify handling of register survival in old and new register allocator, fixing bug #2195.

2013-07-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/compact-results.py,
	* support/regression/collate-results.py: Also look for "unknown
	   instruction"
	* sim/ucsim/st7.src/st7.cc,
	* sim/ucsim/hc08.src/hc08.cc,
	* sim/ucsim/hc08.src/inst.cc: Change result code for invalid and
	  incomplete instructions so regression tests scripts detect problem.

2013-07-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/stm8.src/stm8.cc: Change result code for invalid and
	  incomplete instructions so regression tests scripts detect problem.

2013-07-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c:
	  Change message text for warning on variables being dead at their definitions.

2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp:
	  Fix lospre forwarding.

2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCBBlock.c,
	  src/SDCClrange.c,
	  src/SDCClrange.h,
	  src/SDCCopt.c,
	  src/SDCCralloc.hpp,
	  src/*/ralloc.c:
	  Split non-connected live-ranges.

2013-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCset.h,
	  src/SDCCset.c:
	  Improve const use in sets.
	* src/SDCCglobl.h,
	  src/SDCCBBlock.c,
	  src/SDCCopt.c:
      Allow debug iCode dump after lospre.

2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCbitv.h,
	  src/SDCCbitv.c:
	  Improve const use in bit vectors.

2013-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp: